update air toml to remove directories that dont exist

--- a/.air.toml
+++ b/.air.toml
@@ -5,8 +5,8 @@ tmp_dir = "tmp"
   bin = "./main"
   cmd = "go build -o main ."
   delay = 1000
-  exclude_dir = ["storage", "database"]
-  exclude_file = []
+  exclude_dir = []
+  exclude_file = [app.db]
   exclude_regex = []
   exclude_unchanged = false
   follow_symlink = false
