--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,7 +22,13 @@ jobs:
         go-version: '1.23'
 
     - name: Build
-      run: go build -v ./...
+      run: go build -o monolith main.go
+
+    - name: Upload monolith artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: monolith
+        path: monolith
 
     - name: Test
       run: go test -v ./...
