update workflow tests to not be verbose

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
       run: go build -o monolith main.go
 
     - name: Test
-      run: go test -v ./...
+      run: go test ./...
 
     - name: Deploy to server
       run: ./server_management/deploy.sh ${{ github.event.inputs.server_host_ip }}
