--- a/server_management/Caddyfile
+++ b/server_management/Caddyfile
@@ -1,4 +1,7 @@
 example.com {
         encode zstd gzip
-        reverse_proxy 127.0.0.1:9000
+        reverse_proxy 127.0.0.1:9000 {
+                lb_try_duration 30s
+                lb_try_interval 250ms
+        }
 }
